Remove remaining usages of old query model