@@ -80,7 +80,8 @@ import sleeper.core.statestore.StateStoreException;
 import sleeper.ingest.IngestFactory;
 import sleeper.io.parquet.record.ParquetReaderIterator;
 import sleeper.io.parquet.record.ParquetRecordReader;
-import sleeper.query.model.Query;
+import sleeper.query.model.QueryNew;
+import sleeper.query.model.QueryProcessingConfig;
 import sleeper.query.model.QuerySerDe;
 import sleeper.query.model.output.ResultsOutputConstants;
 import sleeper.query.model.output.S3ResultsOutput;
@@ -178,7 +179,11 @@ public class SqsQueryProcessorLambdaIT {
         Range range1 = rangeFactory.createRange(SCHEMA.getRowKeyFields().get(0), 2000, 2010);
         Range range2 = rangeFactory.createRange(SCHEMA.getRowKeyFields().get(1), 0, null);
         Range range3 = rangeFactory.createRange(SCHEMA.getRowKeyFields().get(2), 0, null);
-        Query query = new Query.Builder(timeSeriesTable.get(TABLE_NAME), "abc", new Region(Arrays.asList(range1, range2, range3))).build();
+        QueryNew query = QueryNew.builder()
+                .tableName(timeSeriesTable.get(TABLE_NAME))
+                .queryId("abc")
+                .regions(List.of(new Region(List.of(range1, range2, range3))))
+                .build();
         this.processQuery(query, instanceProperties);
 
         // Then
@@ -208,7 +213,11 @@ public class SqsQueryProcessorLambdaIT {
         Range range1 = rangeFactory.createRange(SCHEMA.getRowKeyFields().get(0), 2000, true, 2010, true);
         Range range2 = rangeFactory.createRange(SCHEMA.getRowKeyFields().get(1), 0, true, null, true);
         Range range3 = rangeFactory.createRange(SCHEMA.getRowKeyFields().get(2), 0, true, null, true);
-        Query query = new Query.Builder(timeSeriesTable.get(TABLE_NAME), "abc", new Region(Arrays.asList(range1, range2, range3))).build();
+        QueryNew query = QueryNew.builder()
+                .tableName(timeSeriesTable.get(TABLE_NAME))
+                .queryId("abc")
+                .regions(List.of(new Region(List.of(range1, range2, range3))))
+                .build();
         this.processQuery(query, instanceProperties);
 
         // Then
@@ -238,7 +247,11 @@ public class SqsQueryProcessorLambdaIT {
         Range range1 = rangeFactory.createRange(SCHEMA.getRowKeyFields().get(0), 2000, true, 2010, true);
         Range range2 = rangeFactory.createRange(SCHEMA.getRowKeyFields().get(1), 0, true, null, true);
         Range range3 = rangeFactory.createRange(SCHEMA.getRowKeyFields().get(2), 0, true, null, true);
-        Query query = new Query.Builder(timeSeriesTable.get(TABLE_NAME), "abc", new Region(Arrays.asList(range1, range2, range3))).build();
+        QueryNew query = QueryNew.builder()
+                .tableName(timeSeriesTable.get(TABLE_NAME))
+                .queryId("abc")
+                .regions(List.of(new Region(List.of(range1, range2, range3))))
+                .build();
         this.processQuery(query, instanceProperties);
 
         // Then
@@ -298,7 +311,11 @@ public class SqsQueryProcessorLambdaIT {
         Range range1 = rangeFactory.createRange(SCHEMA.getRowKeyFields().get(0), 2006, true, 2006, true);
         Range range2 = rangeFactory.createRange(SCHEMA.getRowKeyFields().get(1), 1, true, 2, true);
         Range range3 = rangeFactory.createRange(SCHEMA.getRowKeyFields().get(2), 7, true, 3, true);
-        Query query = new Query.Builder(timeSeriesTable.get(TABLE_NAME), "abc", new Region(Arrays.asList(range1, range2, range3))).build();
+        QueryNew query = QueryNew.builder()
+                .tableName(timeSeriesTable.get(TABLE_NAME))
+                .queryId("abc")
+                .regions(List.of(new Region(List.of(range1, range2, range3))))
+                .build();
         this.processQuery(query, instanceProperties);
 
         // Then
@@ -338,7 +355,11 @@ public class SqsQueryProcessorLambdaIT {
         Range range22 = rangeFactory.createRange(SCHEMA.getRowKeyFields().get(1), 2, true, 2, true);
         Range range23 = rangeFactory.createRange(SCHEMA.getRowKeyFields().get(2), 1, true, 3, true);
         Region region2 = new Region(Arrays.asList(range21, range22, range23));
-        Query query = new Query.Builder(timeSeriesTable.get(TABLE_NAME), "abc", Arrays.asList(region1, region2)).build();
+        QueryNew query = QueryNew.builder()
+                .tableName(timeSeriesTable.get(TABLE_NAME))
+                .queryId("abc")
+                .regions(List.of(region1, region2))
+                .build();
         this.processQuery(query, instanceProperties);
 
         // Then
@@ -370,8 +391,13 @@ public class SqsQueryProcessorLambdaIT {
         Map<String, String> resultsPublishConfig = new HashMap<>();
         resultsPublishConfig.put(ResultsOutputConstants.DESTINATION, S3ResultsOutput.S3);
         resultsPublishConfig.put(S3ResultsOutput.S3_BUCKET, instanceProperties.get(QUERY_RESULTS_BUCKET));
-        Query query = new Query.Builder(timeSeriesTable.get(TABLE_NAME), "abc", Arrays.asList(region1, region2))
-                .setResultsPublisherConfig(resultsPublishConfig)
+        QueryNew query = QueryNew.builder()
+                .tableName(timeSeriesTable.get(TABLE_NAME))
+                .queryId("abc")
+                .regions(List.of(region1, region2))
+                .processingConfig(QueryProcessingConfig.builder()
+                        .resultsPublisherConfig(resultsPublishConfig)
+                        .build())
                 .build();
         this.processQuery(query, instanceProperties);
 
@@ -405,8 +431,13 @@ public class SqsQueryProcessorLambdaIT {
         resultsPublishConfig.put(ResultsOutputConstants.DESTINATION, SQSResultsOutput.SQS);
         resultsPublishConfig.put(SQSResultsOutput.SQS_RESULTS_URL, instanceProperties.get(QUERY_RESULTS_QUEUE_URL));
         resultsPublishConfig.put(SQSResultsOutput.BATCH_SIZE, "1");
-        Query query = new Query.Builder(timeSeriesTable.get(TABLE_NAME), "abc", Arrays.asList(region1, region2))
-                .setResultsPublisherConfig(resultsPublishConfig)
+        QueryNew query = QueryNew.builder()
+                .tableName(timeSeriesTable.get(TABLE_NAME))
+                .queryId("abc")
+                .regions(List.of(region1, region2))
+                .processingConfig(QueryProcessingConfig.builder()
+                        .resultsPublisherConfig(resultsPublishConfig)
+                        .build())
                 .build();
         this.processQuery(query, instanceProperties);
 
@@ -449,8 +480,13 @@ public class SqsQueryProcessorLambdaIT {
         resultsPublishConfig.put(WebSocketResultsOutput.MAX_BATCH_SIZE, "1");
         resultsPublishConfig.put(WebSocketResultsOutput.ACCESS_KEY, "accessKey");
         resultsPublishConfig.put(WebSocketResultsOutput.SECRET_KEY, "secretKey");
-        Query query = new Query.Builder(timeSeriesTable.get(TABLE_NAME), "abc", Arrays.asList(region1, region2))
-                .setResultsPublisherConfig(resultsPublishConfig)
+        QueryNew query = QueryNew.builder()
+                .tableName(timeSeriesTable.get(TABLE_NAME))
+                .queryId("abc")
+                .regions(List.of(region1, region2))
+                .processingConfig(QueryProcessingConfig.builder()
+                        .resultsPublisherConfig(resultsPublishConfig)
+                        .build())
                 .build();
 
         try {
@@ -500,8 +536,13 @@ public class SqsQueryProcessorLambdaIT {
         resultsPublishConfig.put(WebSocketResultsOutput.MAX_BATCH_SIZE, "8");
         resultsPublishConfig.put(WebSocketResultsOutput.ACCESS_KEY, "accessKey");
         resultsPublishConfig.put(WebSocketResultsOutput.SECRET_KEY, "secretKey");
-        Query query = new Query.Builder(timeSeriesTable.get(TABLE_NAME), "abc", Arrays.asList(region1, region2))
-                .setResultsPublisherConfig(resultsPublishConfig)
+        QueryNew query = QueryNew.builder()
+                .tableName(timeSeriesTable.get(TABLE_NAME))
+                .queryId("abc")
+                .regions(List.of(region1, region2))
+                .processingConfig(QueryProcessingConfig.builder()
+                        .resultsPublisherConfig(resultsPublishConfig)
+                        .build())
                 .build();
 
         try {
@@ -547,8 +588,13 @@ public class SqsQueryProcessorLambdaIT {
         statusReportDestination.put(WebSocketResultsOutput.CONNECTION_ID, connectionId);
         statusReportDestination.put(WebSocketResultsOutput.ACCESS_KEY, "accessKey");
         statusReportDestination.put(WebSocketResultsOutput.SECRET_KEY, "secretKey");
-        Query query = new Query.Builder(timeSeriesTable.get(TABLE_NAME), "abc", Arrays.asList(region1, region2))
-                .setStatusReportDestinations(Lists.newArrayList(statusReportDestination))
+        QueryNew query = QueryNew.builder()
+                .tableName(timeSeriesTable.get(TABLE_NAME))
+                .queryId("abc")
+                .regions(List.of(region1, region2))
+                .processingConfig(QueryProcessingConfig.builder()
+                        .statusReportDestinations(List.of(statusReportDestination))
+                        .build())
                 .build();
 
         try {
@@ -595,8 +641,13 @@ public class SqsQueryProcessorLambdaIT {
         statusReportDestination.put(WebSocketResultsOutput.CONNECTION_ID, connectionId);
         statusReportDestination.put(WebSocketResultsOutput.ACCESS_KEY, "accessKey");
         statusReportDestination.put(WebSocketResultsOutput.SECRET_KEY, "secretKey");
-        Query query = new Query.Builder(timeSeriesTable.get(TABLE_NAME), "abc", Arrays.asList(region1, region2))
-                .setStatusReportDestinations(Lists.newArrayList(statusReportDestination))
+        QueryNew query = QueryNew.builder()
+                .tableName(timeSeriesTable.get(TABLE_NAME))
+                .queryId("abc")
+                .regions(List.of(region1, region2))
+                .processingConfig(QueryProcessingConfig.builder()
+                        .statusReportDestinations(List.of(statusReportDestination))
+                        .build())
                 .build();
 
         try {
@@ -645,7 +696,7 @@ public class SqsQueryProcessorLambdaIT {
         return recordCount;
     }
 
-    private long getNumberOfRecordsInFileOutput(InstanceProperties instanceProperties, Query query) throws IllegalArgumentException, IOException {
+    private long getNumberOfRecordsInFileOutput(InstanceProperties instanceProperties, QueryNew query) throws IllegalArgumentException, IOException {
         String fileSystem = instanceProperties.get(FILE_SYSTEM);
         String resultsBucket = instanceProperties.get(QUERY_RESULTS_BUCKET);
         String outputDir = fileSystem + resultsBucket + "/query-" + query.getQueryId();
@@ -665,7 +716,7 @@ public class SqsQueryProcessorLambdaIT {
         return numberOfRecordsInOutput;
     }
 
-    private void processQuery(Query query, InstanceProperties instanceProperties) throws ObjectFactoryException {
+    private void processQuery(QueryNew query, InstanceProperties instanceProperties) throws ObjectFactoryException {
         QuerySerDe querySerDe = new QuerySerDe(new TablePropertiesProvider(instanceProperties, s3Client, dynamoClient));
         String jsonQuery = querySerDe.toJson(query);
         processQuery(jsonQuery, instanceProperties);
